fix merge conflicts with master

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -9,9 +9,11 @@
 @import '/scss/footer';
 @import '/scss/forms';
 @import '/scss/header';
+@import '/scss/instruction';
 @import '/scss/layout';
 @import '/scss/tables';
 @import '/scss/type';
 @import '/scss/password-meter';
 @import '/scss/print';
+@import '/scss/save-button';
 @import '/scss/section';
